fix loader flickering

--- a/src/app.less
+++ b/src/app.less
@@ -28,6 +28,10 @@ body {
 	transition: all 0.5s ease-out;
 }
 
+[v-cloak] {
+	display: none;
+}
+
 .day 		{ background: #c58b00; }
 .twilight 	{ background: #637234; }
 .night 		{ background: #005869; }
@@ -55,9 +59,20 @@ body {
 	opacity: 1;
 
 	&.loaded {
-		background: transparent;
 		transform: scale(0);
+		top: 100%;
 		opacity: 0;
+
+		#loader-spin {
+			&:before {
+				-webkit-animation: none;
+				animation: none;
+			}
+			&:after {
+				-webkit-animation: none;
+				animation: none;
+			}
+		}
 	}
 
 	#loader-spin {
